# rag-knowledge-base

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml  requirements.txt
benchmarks/: run_real_retrieval_eval.py  run_retrieval_eval.py
benchmarks/dataset/: ecommerce_corpus.jsonl  ecommerce_dedup_corpus.jsonl  ecommerce_dedup_queries.jsonl  ecommerce_intent_corpus.jsonl  ecommerce_queries.jsonl  ecommerce_reply_corpus.jsonl  ecommerce_reply_queries.jsonl  queries.jsonl
examples/: basic_rag.py
scripts/: build_dedup_corpus.py  build_intent_corpus.py  build_real_benchmark.py  build_reply_benchmark.py  check_models.py  diagnose_benchmark.py  download_models.py  explore_dataset.py  tune_hybrid.py
src/: __init__.py  kb.py
src/cache/: __init__.py  semantic_cache.py
src/ingestion/: __init__.py  chunker.py
src/rbac/: __init__.py  metadata_filter.py
src/retrieval/: __init__.py  dense_search.py  hybrid_search.py  query_expansion.py  reranker.py  sparse_search.py
tests/: test_chunker.py  test_hybrid_search.py  test_semantic_cache.py
