[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-knowledge-base"
version = "0.1.0"
description = "Enterprise-grade hybrid retrieval knowledge base with Dense + Sparse + Rerank."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "zhengjianguo", email = "348259567@qq.com"}
]
keywords = ["rag", "knowledge-base", "hybrid-search", "semantic-cache", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "rank-bm25>=0.2.2",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
benchmark = [
    "datasets>=2.14.0",
    "sentence-transformers>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/zhengjianguo/rag-knowledge-base"
Repository = "https://github.com/zhengjianguo/rag-knowledge-base"
Issues = "https://github.com/zhengjianguo/rag-knowledge-base/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
